# GenerovanieBDD

./: .gitignore  CMakeLists.txt
GenerovanieBDD/: BDDStatisticsGenerator.cpp  BDDStatisticsGenerator.hpp  BestOrder.cpp  BestOrder.hpp  CMakeLists.txt  CSVOutput.cpp  CSVOutput.hpp  DerivativesBasedHigherOrder.cpp  DerivativesBasedHigherOrder.hpp  DerivativesBasedOrder.cpp  DerivativesBasedOrder.hpp  DerivativesBasedOrderDT.cpp  DerivativesBasedOrderDT.hpp  EntropyBasedOrder.cpp  EntropyBasedOrder.hpp  EntropyBasedOrderDT.cpp  EntropyBasedOrderDT.hpp  GenerovanieBDD.cpp  GenerovanieBDD.h  OriginalOrder.cpp  OriginalOrder.hpp  RandomOrder.cpp  RandomOrder.hpp  Strategy.hpp
PLA_FOR_LEARNING/: 5xp1_12_der.pla  5xp1_16_der.pla  5xp1_6_der.pla  5xp1_8_der.pla  5xp1_nula.pla  5xp1_pomlcka.pla  test2.pla
